--- a/css/local-styles.css
+++ b/css/local-styles.css
@@ -12,7 +12,9 @@ h2 {
     border: 1px solid dodgerblue;
     border-radius: .5rem;
     padding: .5rem;
-    margin: 1rem 0;
+    margin: 1rem 5rem;
+    font-size: 15px;
+    line-height: 1.2;
 }
 
 p span:hover {
