--- a/css/local-styles.css
+++ b/css/local-styles.css
@@ -135,7 +135,7 @@ input {
     -webkit-appearance: none;
     appearance: none;
     width: 64px;
-    padding-left: 33px;
+    padding: 0 0 0 33px;
     margin: 0;
     border-radius: 16px;
     background: radial-gradient(circle 12px, white 100%, transparent calc(100% + 1px)) #ccc -16px;
