chg title, modify p margin

--- a/css/local-styles.css
+++ b/css/local-styles.css
@@ -12,7 +12,7 @@ h2 {
     border: 1px solid dodgerblue;
     border-radius: .5rem;
     padding: .5rem;
-    margin: 1rem 5rem;
+    margin: 1rem;
     font-size: 15px;
     line-height: 1.2;
 }
