--- a/css/local-styles.css
+++ b/css/local-styles.css
@@ -1,155 +1,163 @@
-/*From https://codepen.io/marcwiethe/pen/JprZvJ*/
-
-main {
-    margin: 1rem 3rem 10rem 3rem;
-}
-
-h2 {
-    font-size: 1.1em;
-}
-
-.p {
-    border: 1px solid dodgerblue;
-    border-radius: .5rem;
-    padding: .5rem;
-    margin: 1rem;
-    font-size: 15px;
-    line-height: 1.2;
-}
-
-p span:hover {
-    background: yellow;
-    cursor: pointer;
-}
-
-.defs {
-    padding: 0 0 12px 4px;
-    text-align: center;
-    color: dodgerblue;
-    font-weight: bold;
-    font-style: italic;
-    margin: 0.5rem 0;
-}
-
-.emph {
-    font-style: italic;
-}
-
-.sel {
-    height: 1.3rem;
-}
-
-button {
-    color: white;
-    background-color: dodgerblue;
-    box-shadow: none;
-    border-radius: 2px;
-}
-
-/*TOOLTIPS*/
-.tooltip {
-    position: relative;
-    transition: all 0.3s ease;
-    text-decoration: none;
-    cursor: grabbing;
-    z-index: 999999;
-    box-sizing: border-box;
-}
-/* .tooltip:before {
-    content: "";
-    opacity: 0;
-    pointer-events: none;
-    left: 50%;
-    transform: translate3d(-50%, 0%, 0);
-    transition: all 0.3s ease;
-    transition-delay: 1.2s;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 10px 10px 0 10px;
-    border-color: dodgerblue transparent transparent transparent;
-} */
-
-.tooltip:after {
-    content: attr(data-tooltip);
-    position: absolute;
-    left: 50%;
-    top: 1.0rem;
-    transform: translate3d(-50%, 1.0rem, 0);
-    transition: all 0.3s ease;
-    transition-delay: 1.2s;
-    width: -webkit-max-content;
-    width: -moz-max-content;
-    width: max-content;
-    max-width: 200px !important;
-    opacity: 0;
-    pointer-events: none;
-    border-radius: 4px;
-    background: dodgerblue;
-    color: white;
-    font-size: 11px;
-    font-weight: bold;
-    text-align: left;
-    line-height: 14px;
-    text-transform: none;
-    white-space: pre-line;
-    padding: 4px 8px;
-}
-
-
-.tooltip:hover {
-    background-color: rgba(0, 0, 0, 0.12);
-}
-
-.tooltip:hover:after {
-    opacity: 1;
-}
-
-.tooltip-not-found:after {
-    color: white;
-    font-weight: bold;
-    background: red;
-}
-
-/*TOGGLE SWITCH*/
-.hidden {
-    display: none;
-}
-
-input {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 64px;
-    padding: 0 0 0 33px;
-    margin: 0;
-    border-radius: 16px;
-    background: radial-gradient(circle 12px, white 100%, transparent calc(100% + 1px)) #ccc -16px;
-    transition: 0.3s ease-in-out;
-}
-
-input::before {
-    content: "OFF";
-    font: bold 12px/32px Verdana;
-    color: white;
-    text-shadow: 0 1px black;
-}
-
-:checked {
-    padding-left: 8px;
-    background-color: rgb(37, 151, 62);
-    background-position: 16px;
-}
-
-:checked::before {
-    content: "ON";
-}
-
-@media only screen and (min-width: 768px) {
+    /*GENERAL*/
     main {
-        margin: 2rem 5rem 10rem 5rem;
+        margin: 1rem 3rem 10rem 3rem;
+    }
+    
+    h2 {
+        font-size: 1.1em;
+    }
+    
+    .p {
+        border: 1px solid dodgerblue;
+        border-radius: .5rem;
+        padding: .5rem;
+        margin: 1rem 0;
+        font-size: 15px;
+        line-height: 1.2;
+    }
+    
+    p span:hover {
+        background: yellow;
+        cursor: pointer;
+    }
+    
+    .defs {
+        padding: 0 0 12px 4px;
+        text-align: center;
+        color: dodgerblue;
+        font-weight: bold;
+        font-style: italic;
+        margin: 0.5rem 0;
+    }
+    
+    .emph {
+        font-style: italic;
+    }
+    
+    .sel {
+        height: 1.3rem;
+    }
+    
+    button {
+        color: white;
+        background-color: dodgerblue;
+        box-shadow: none;
+        border-radius: 2px;
     }
 
-    h2 {
-        font-size: 1.5em;
+    .hidden {
+        display: none;
     }
-}
+
+    /*DEFINITION GROUP*/
+    .div {
+        background-color: dodgerblue;
+        position: fixed;
+        z-index: 99999999;
+        min-width: 100%;
+        height: 32px;
+        top: 0;
+        text-align: left;
+        line-height: 1rem;
+    }
+
+    .span {
+        padding: 0 0 12px 4px;
+        text-align: center;
+        color: blue;
+        font-weight: bold;
+        font-style: italic;
+        margin: 0.5rem;
+    }
+
+    .help {
+        font-style: italic;
+        margin: 0.5rem;
+    }
+
+    /*TOOLTIPS*/
+    .tooltip {
+        position: relative;
+        transition: all 0.3s ease;
+        text-decoration: none;
+        cursor: grabbing;
+        z-index: 999999;
+        box-sizing: border-box;
+    }
+
+    .tooltip:after {
+        content: attr(data-tooltip);
+        position: absolute;
+        left: 50%;
+        top: 1.0rem;
+        transform: translate3d(-50%, 1.0rem, 0);
+        transition: all 0.3s ease;
+        transition-delay: 1.2s;
+        width: -webkit-max-content;
+        width: -moz-max-content;
+        width: max-content;
+        max-width: 200px !important;
+        opacity: 0;
+        pointer-events: none;
+        border-radius: 4px;
+        background: dodgerblue;
+        color: white;
+        font-size: 11px;
+        font-weight: bold;
+        text-align: left;
+        line-height: 14px;
+        text-transform: none;
+        white-space: pre-line;
+        padding: 4px 8px;
+    }
+
+    .tooltip:hover {
+        background-color: rgba(0, 0, 0, 0.12);
+    }
+
+    .tooltip:hover:after {
+        opacity: 1;
+    }
+
+    .tooltip-not-found:after {
+        color: white;
+        font-weight: bold;
+        background: red;
+    }
+
+    /*TOGGLE SWITCH*/
+    input[type=checkbox],
+    .input {
+        margin: 0;
+        -webkit-appearance: none;
+        appearance: none;
+        padding: 0 0 0 30px;
+        border-radius: 16px;
+        background: radial-gradient(circle 12px, white 100%, transparent calc(100% + 1px)) #ccc -16px;
+        transition: 0.3s ease-in-out;
+        position: inherit;
+        height: 32px;
+        width: 64px;
+        top: 0;
+        bottom: 0;
+        box-shadow: none;
+    }
+
+    .input::before {
+        content: "OFF";
+        font: bold 12px/32px Verdana;
+        color: white;
+        text-shadow: 0 1px black;
+    }
+
+    .input:checked {
+        padding: 0 0 0 8px;
+        background-color: rgb(37, 151, 62);
+        background-position: 16px;
+        height: 32px;
+        width: 64px;
+    }
+
+    .input:checked::before {
+        content: "ON";
+    }
