--- a/css/local-styles.css
+++ b/css/local-styles.css
@@ -30,8 +30,7 @@
         background-color: dodgerblue;
         min-width: 100%;
         height: 32px;
-        text-align: left;
-        line-height: 1rem;
+        line-height: 1.2;
         color: black;
         padding-left: 0.5rem;        
     }
@@ -54,7 +53,7 @@
     /*DEFINITION GROUP*/
     #def-div {
         text-align: left;
-        line-height: 1rem;
+        line-height: 1.2;
     }
 
     .span {
@@ -71,57 +70,39 @@
         margin: 0.5rem;
     }
 
-    /*TOOLTIPS*/
-    .tooltip {
-        position: relative;
-        transition: all 0.3s ease;
-        text-decoration: none;
-        cursor: grabbing;
-        z-index: 999999;
-        box-sizing: border-box;
+    /*BAR*/
+    .def-help {
+        margin: 0 0 0 0.5rem;
     }
-
-    .tooltip:after {
-        content: attr(data-tooltip);
-        position: absolute;
-        left: 50%;
-        top: 1.0rem;
-        transform: translate3d(-50%, 1.0rem, 0);
-        transition: all 0.3s ease;
-        transition-delay: 1.2s;
-        width: -webkit-max-content;
-        width: -moz-max-content;
-        width: max-content;
-        max-width: 200px !important;
-        opacity: 0;
-        pointer-events: none;
-        border-radius: 4px;
-        background: dodgerblue;
+    
+    .def-help a:link {
+        color: blue;
+    }
+    
+    .def-help a:visited {
+        color: purple;
+    }
+    
+    .def-help a:hover {
+        color: orange;
+    }
+    
+    .def-help a:active {
         color: white;
-        font-size: 11px;
-        font-weight: bold;
-        text-align: left;
-        line-height: 14px;
-        text-transform: none;
-        white-space: pre-line;
-        padding: 4px 8px;
     }
-
-    .tooltip:hover {
-        background-color: rgba(0, 0, 0, 0.12);
+    
+    .def-audio {
+        width: 32px;
+        height: 32px;
+        margin-bottom: -.3rem;
+        padding-left: 4px;
+        display: inline-block;
+        background-image: url("data:image/svg+xml,%3Csvg width='20px' height='20px' viewBox='-1 -15 32 42' xmlns='http://www.w3.org/2000/svg'%3E%3Ctitle%3Efile_type_audio%3C/title%3E%3Cpath d='M17.229,4a.9.9,0,0,0-.569.232l-7.6,6.32a1.158,1.158,0,0,1-.955.328H3.208A1.2,1.2,0,0,0,2,12.088v7.826A1.2,1.2,0,0,0,3.208,21.12H8.1a1.158,1.158,0,0,1,.955.328l7.6,6.32c.521.433,1.081.224,1.081-.289V4.522A.494.494,0,0,0,17.229,4ZM27,6.3,25.209,8.093a14.708,14.708,0,0,1,0,15.844l1.785,1.776A17.19,17.19,0,0,0,27,6.3Zm-4.333,4.323L20.905,12.4a6.035,6.035,0,0,1,0,7.237l1.756,1.756a8.554,8.554,0,0,0,.01-10.769Z' style='fill:%23000000'/%3E%3C/svg%3E");
     }
-
-    .tooltip:hover:after {
-        opacity: 1;
+    
+    .def-svg {
+        margin-right: -.3rem;
     }
-
-    .tooltip-not-found:after {
-        color: white;
-        font-weight: bold;
-        background: red;
-    }
-
-    /*TOGGLE SWITCH*/
     /*TOGGLE SWITCH*/
     input[type=checkbox],
     .input {
